<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_car_details"
    android:layout_marginTop="120dp"
    android:padding="16dp"
    tools:context=".ui.fragment.CarDetailsFragment">

    <LinearLayout
        android:id="@+id/car_detailsparent_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textview_car_details_no_car_selected_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:text="@string/car_details_no_vehicle_selected_title"
            />

        <TextView
            android:id="@+id/textview_car_details_no_car_selected_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/car_details_no_vehicle_selected_subtitle"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_car_details_header"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="@color/primary_color"
            app:cardCornerRadius="20dp"
            app:contentPaddingTop="25dp"
            app:contentPaddingLeft="30dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/car_details_number_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:text="@string/car_details_numberplate_result"
                    />

                <TextView
                    android:id="@+id/car_details_vehicle_type_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/light_gray"
                    android:text="@string/car_details_vehicle_type_result_wrapper"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_car_details_hero"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/white"
            android:visibility="gone"
            app:contentPadding="20dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_details_wrapper_title"
                    android:textSize="16sp"
                    android:textColor="@color/dark_gray"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/textview_car_details_brand_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_gray"
                        android:textSize="15sp"
                        android:text="@string/car_details_vehicle_brand_title"
                        />

                    <TextView
                        android:id="@+id/textview_car_details_brand_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/car_details_vehicle_brand_result"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_car_details_type_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_gray"
                        android:textSize="15sp"
                        android:text="@string/car_details_vehicle_type_title"
                        />

                    <TextView
                        android:id="@+id/textview_car_details_type_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/car_details_vehicle_type_result"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_car_details_first_color_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_gray"
                        android:textSize="15sp"
                        android:text="@string/car_details_vehicle_first_color_title"
                        />

                    <TextView
                        android:id="@+id/textview_car_details_first_color_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/car_details_vehicle_first_color_result"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_car_details_total_cylinders_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_gray"
                        android:textSize="15sp"
                        android:text="@string/car_details_vehicle_total_cylinders_title"
                        />

                    <TextView
                        android:id="@+id/textview_car_details_total_cylinders_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/car_details_vehicle_total_cylinders_result"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_car_details_cylinder_content_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_gray"
                        android:textSize="15sp"
                        android:text="@string/car_details_vehicle_cylinder_content_title"
                        />

                    <TextView
                        android:id="@+id/textview_car_details_cylinder_content_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/car_details_vehicle_cylinder_content_result"
                        />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>