<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginTop="120dp"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/parent_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="20dp"
            app:contentPaddingTop="16dp"
            app:contentPaddingLeft="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:text="@string/card_title"
                    />

                <TextView
                    android:id="@+id/card_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/secondary_color"
                    android:text="@string/card_subtitle"
                    />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <EditText
                android:id="@+id/edittext_numberplate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="16sp"
                android:padding="16dp"
                android:background="@drawable/custom_input"
                android:hint="@string/numberplate_input_placeholder"
                android:text=""
                android:layout_marginEnd="10dp"
                />

            <Button
                android:id="@+id/button_find_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@android:color/white"
                android:text="@string/numberplate_button_submit"
                android:background="@drawable/button_result"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_total_overview"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/button_total_view"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:text="@string/total_view_button"
                />

            <ListView
                android:id="@+id/listview_cars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:visibility="gone"
                />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_car_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>